--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,31 @@
-FROM node:18-alpine
+# Stage 1: Build the React application
+FROM node:18-alpine as build
 
 WORKDIR /app
 
+# Copy package.json and package-lock.json (if available)
 COPY package*.json ./
+
+# Install dependencies
 RUN npm install
 
+# Copy the rest of the application code
 COPY . .
 
-EXPOSE 5173
-CMD ["npm", "run", "dev", "--", "--host"] # Runs Vite dev server, accessible externally
+# Build the application
+RUN npm run build
+
+# Stage 2: Serve the application with Nginx
+FROM nginx:alpine
+
+# Copy the build output from the previous stage
+COPY --from=build /app/dist /usr/share/nginx/html
+
+# Copy the custom Nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Expose port 80
+EXPOSE 80
+
+# Start Nginx
+CMD ["nginx", "-g", "daemon off;"]
