--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,6 +2,9 @@ server {
     listen 80;
     server_name localhost;
 
+    # Allow larger file uploads
+    client_max_body_size 50M;
+
     root /usr/share/nginx/html;
     index index.html;
 
@@ -12,7 +15,7 @@ server {
 
     # Proxy API requests to the backend service
     location /api/ {
-        proxy_pass http://backend:5001/api/;
+        proxy_pass http://arteditor-backend:5001/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
